# bindgen-init

./: LICENSE  README.md  pyproject.toml
src/bindgeninit/: __init__.py  __main__.py  constants.py
